# littlec

./: CMakeLists.txt
source/: build.bat  littlec.h  main.c
